[package]
name = "todo_list"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] } #used for command line text parsing
serde = { version = "1.0", features = ["derive"] } #used for serialisation
serde_json = "1.0" #JSON plugin
anyhow = "1.0" #Error handling
eframe = "0.33.3"
